⚡️ WEB SITE : SLIDE

--- a/website/index.html
+++ b/website/index.html
@@ -16,13 +16,21 @@
 	<!-- Favicons End -->
 
 	<!-- CSS Start -->
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="assets/style/style.css">
 	<!-- CSS End -->
 
 </head>
 <body>
 
-
+  <div class='slide-container'>
+    <div class='slide-text-container'>
+       <h1>test</h1>
+    </div>
+    <div class="slide-shadow"></div>
+    <video autoplay muted loop id="slide-video">
+      <source src="./assets/videos/slide.mp4" type="video/mp4">
+    </video>
+  </div>
 
 </body>
-</html><>
+</html>
