--- a/website/index.html
+++ b/website/index.html
@@ -13,6 +13,7 @@
 
   <!-- font-family: 'Roboto', sans-serif; -->
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <!-- In case image.ico -->
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico"  />
 
@@ -47,7 +48,25 @@
   </div>
 
   <div class='news-letter'>
-    <h1>Join Us !</h1>
+    <div class="container">
+      <div class='row'>
+        <div style='position: relative; height: 100vh;' class='col-md-6 col-12'>
+          <div class='info-container'>
+            <h4 class='sub-title'>Subscribe to our</h4>
+            <h1>News  <br /> Letter,</h1>
+            <div class='form-container'>
+              <input type='text' placeholder='Name' class='input-nl' />
+            </div>
+            <div class='form-container'>
+              <input type='text' placeholder='Email' class='input-nl' />
+            </div>
+          </div>          
+        </div>
+        <div class='col-md-6 col-12'>
+          <img src="" alt='' />
+        </div>
+      </div>
+    </div>
   </div>
 
 
