--- a/website/index.html
+++ b/website/index.html
@@ -62,8 +62,9 @@
             </div>
           </div>          
         </div>
-        <div class='col-md-6 col-12'>
-          <img src="" alt='' />
+        <div class='col-md-6 col-12 image-side'>
+          <!--<div class="nl-image"></div>-->
+          <img src='./assets/photos/candy-p.gif' />
         </div>
       </div>
     </div>
